--- a/gb/20/9/30/n12441108.md
+++ b/gb/20/9/30/n12441108.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/anafio3719/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/anafio3719/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/anafio3719/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/anafio3719/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/anafio3719/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/anafio3719/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/anafio3719/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/anafio3719/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>湾区台湾商会向菲利蒙捐赠口罩</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/IMG_7984-600x400.jpg" />
 <h6>周一（9月28日），旧金山湾区台湾商会向菲利蒙（Fremont）市的老年服务机构捐赠口罩。（曹景哲／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年09月30日讯】（大纪元记者曹景哲<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E8%8F%B2%E5%88%A9%E8%92%99.md#1">菲利蒙</a>报导）周一（9月28日），旧金山<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E5%8F%B0%E6%B9%BE%E5%95%86%E4%BC%9A.md#1">湾区台湾商会</a>向<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E8%8F%B2%E5%88%A9%E8%92%99.md#1">菲利蒙</a>（Fremont）市的老年服务机构捐赠<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>。除了台湾商会，菲利蒙市长<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E9%AB%98%E5%8F%99%E5%8A%A0.md#1">高叙加</a>和市议员<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E9%BB%84%E6%B4%81%E5%AE%9C.md#1">黄洁宜</a>，还有旧金山经文处处长赖铭琪和金山湾区侨教中心主任阎树荣也参加捐赠仪式。</p>
-<p>商会会长周信结表示，这次向菲利蒙15个老人中心捐赠2.5万片<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>，希望他们能平安渡过这次疫情。同时，也向市长<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E9%AB%98%E5%8F%99%E5%8A%A0.md#1">高叙加</a>（Lily Mei）颁发“最佳市长奖”，向市议员<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E9%BB%84%E6%B4%81%E5%AE%9C.md#1">黄洁宜</a>（Teresa Keng）颁发了“最佳市议员奖”。</p>
-<p>他说，<ahref="https://github.com/anafio3719/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E5%8F%B0%E6%B9%BE%E5%95%86%E4%BC%9A.md#1">湾区台湾商会</a>筹资买到50万个口罩，3月开始与旧金山经文处合作，捐赠给北加州的主流社会机构，最远到Stockton和Modesto。因为疫情的原因，今年的感恩节餐会将取消，改为赠送个人防护物资（PPE）。</p>
+	<p>【大纪元2020年09月30日讯】（大纪元记者曹景哲<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8F%B2%E5%88%A9%E8%92%99.md#1">菲利蒙</a>报导）周一（9月28日），旧金山<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E5%8F%B0%E6%B9%BE%E5%95%86%E4%BC%9A.md#1">湾区台湾商会</a>向<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8F%B2%E5%88%A9%E8%92%99.md#1">菲利蒙</a>（Fremont）市的老年服务机构捐赠<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>。除了台湾商会，菲利蒙市长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E5%8F%99%E5%8A%A0.md#1">高叙加</a>和市议员<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%BB%84%E6%B4%81%E5%AE%9C.md#1">黄洁宜</a>，还有旧金山经文处处长赖铭琪和金山湾区侨教中心主任阎树荣也参加捐赠仪式。</p>
+<p>商会会长周信结表示，这次向菲利蒙15个老人中心捐赠2.5万片<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%A3%E7%BD%A9.md#1">口罩</a>，希望他们能平安渡过这次疫情。同时，也向市长<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%AB%98%E5%8F%99%E5%8A%A0.md#1">高叙加</a>（Lily Mei）颁发“最佳市长奖”，向市议员<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%BB%84%E6%B4%81%E5%AE%9C.md#1">黄洁宜</a>（Teresa Keng）颁发了“最佳市议员奖”。</p>
+<p>他说，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E5%8F%B0%E6%B9%BE%E5%95%86%E4%BC%9A.md#1">湾区台湾商会</a>筹资买到50万个口罩，3月开始与旧金山经文处合作，捐赠给北加州的主流社会机构，最远到Stockton和Modesto。因为疫情的原因，今年的感恩节餐会将取消，改为赠送个人防护物资（PPE）。</p>
 <p>周会长还表示，台湾防疫的出色表现受到国际社会的赞许和关注，美国卫生部长阿扎尔也于8月9日访问台湾，希望加强与台湾的合作关系。</p>
 <p>他个人也支持市长高叙加和市议员黄洁宜能够连任，再服务4年。今年的菲利蒙市长竞争激烈，有6个候选人加入选战。</p>
 <p>赖铭琪处长表示，捐赠口罩帮助在地政府防疫是经文处的重要工作。结合侨团的实力帮助台湾做外交，这次与台湾商会合作，向北加州、内华达州和犹他州捐赠了大约上百万片口罩。</p>
@@ -21,42 +21,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/anafio3719/djy/blob/master/gb/20/5/1/n12074370.md#1">湾区硅谷台商论坛 为第一线人员捐助防护物资</a></li>
-<li><a href="https://github.com/anafio3719/djy/blob/master/gb/20/6/12/n12179790.md#1">旧金山湾区台湾商会向社区捐赠防护物资</a></li>
-<li><a href="https://github.com/anafio3719/djy/blob/master/gb/20/7/3/n12229191.md#1">旧金山湾区台湾商会 捐赠100万口罩</a></li>
-<li><a href="https://github.com/anafio3719/djy/blob/master/gb/20/7/29/n12291305.md#1">台商向圣塔克拉拉县捐赠医疗物资</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/1/n12074370.md#1">湾区硅谷台商论坛 为第一线人员捐助防护物资</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/6/12/n12179790.md#1">旧金山湾区台湾商会向社区捐赠防护物资</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/3/n12229191.md#1">旧金山湾区台湾商会 捐赠100万口罩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/7/29/n12291305.md#1">台商向圣塔克拉拉县捐赠医疗物资</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/1/n11226848.md#1" target="_blank">共产暴政录：越共排华事件</a></li><li><a href="https://github.com/anafio3719/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/10/n4570585.md#1" target="_blank">四川老人两次重伤不治痊愈</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/11/n10048915.md#1" target="_blank">《苦菜花》人物原型的真实人生（6）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/25/n12429747.md#1">美退役少校：外星人1978年入侵基地遭射杀</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/8/n12388919.md#1">灵魂在阴间受刑？古籍记载人身病痛另有缘由</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/2/1/5/n161846.md#1">梦溪笔谈中的神秘现象（上）</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/28/n12435503.md#1">【时事纵横】蓬佩奥访梵蒂冈 聚焦中国宗教自由</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/28/n12437421.md#1">【新闻看点】美大选辩论 川普2招或击拜登软肋</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/29/n12438105.md#1">【十字路口】川普与拜登 中共最怕谁当选？</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433654.md#1">华春莹发推讽美国 大陆网民评论大翻车</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/26/n12433220.md#1">【新闻看点】疫情严峻 WHO：死亡或超二百万</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433788.md#1">陆媒称共军24小时内可登陆台湾 遭美媒打脸</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12434488.md#1">刘德华迎59岁生日 刘嘉玲晒合照显交情</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433372.md#1">竹内结子被丈夫发现于家中身亡 享年40岁</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433724.md#1">竹内结子死讯公司也震惊 网友忧井本绚子难过</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12434593.md#1">唐嫣首曝女儿超甜小名 赞6个月大却超有主见</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/25/n12429822.md#1">第55届金钟奖完整得奖名单 柯佳嬿二度封后</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433788.md#1">陆媒称共军24小时内可登陆台湾 遭美媒打脸</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/27/n12433931.md#1">丈夫遭鲨鱼攻击 怀孕妻子跳海将他救回来</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/25/n12430738.md#1">腿粗小腹胖？老中医示范3动作 告别下半身松垮</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/23/n12425392.md#1">【线上活动】三类人易发生心脏病 这样吃降三高</a></li>
-<li><a href="https://github.com/vylahl3695/djy/blob/master/gb/20/9/28/n12436111.md#1">竹内结子疑产后忧郁轻生 检测逾10分建议就医</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/anafio3719/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/anafio3719/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/30/n12441108.htm">湾区台湾商会向菲利蒙捐赠口罩</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/30/n12441108.htm">湾区台湾商会向菲利蒙捐赠口罩</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/anafio3719/djy/blob/master/gb/20/9/30/n12441108.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/anafio3719/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/anafio3719/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/anafio3719/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/anafio3719/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/anafio3719/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/9/30/n12441108.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
